<resources>
    <string name="app_name">DropByDrop</string>
    <string name="preferences">PREFERENCES</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="lbl_login_header">Now you don\'t have to be a \n Superhero to save lives</string>

    <string name="roboto_bold">Roboto-Bold.ttf</string>
    <string name="roboto_regular">Roboto-Regular.ttf</string>
    <string name="avenir_book">Avenir.ttc</string>
    <string name="avenir_roman">Avenir_Roman.otf</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_pwd">Password</string>
    <string name="lbl_sign_in">SIGN IN</string>
    <string name="lbl_hint_username">Enter username</string>
    <string name="lbl_hint_pwd">Enter password</string>
    <string name="lbl_forgot_pwd">FORGOT PASSWORD</string>
    <string name="lbl_sign_up">SIGN UP</string>
    <string name="title_activity_back_ground">BackGroundActivity</string>
    <string name="lbl_background_details">Background Details</string>
    <string name="lbl_height">HEIGHT</string>
    <string name="lbl_weight">WEIGHT</string>
    <string name="lbl_location">LOCATION</string>
    <string name="lbl_empty_stomach">EMPTY STOMACH</string>
    <string name="lbl_yes">YES</string>
    <string name="lbl_indulgence"><![CDATA[INDULGENCE IN DRUGS & NARCOTICS]]></string>
    <string name="lbl_recent_surgeries">ANY RECENT SURGERIES</string>
    <string name="lbl_alcohol_consumption">ALCOHOL CONSUMPTION</string>
    <string name="lbl_any_diseases">ANY DISEASES?</string>
    <string name="lbl_hint_disease_details">Mention the name here, seperated by commas.</string>
    <string name="lbl_done">DONE</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="lbl_your_profile">Your Profile</string>
    <string name="lbl_profile_name">Saneet Naik</string>
    <string name="lbl_donate_blood">Donate Blood</string>
    <string name="lbl_request_help">Request Help</string>
    <string name="lbl_notifications">Notifications</string>
</resources>
