<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hackathon.dropbydrop.activities.BackGroundActivity"
    tools:showIn="@layout/activity_back_ground">

    <ScrollView
        android:id="@+id/scrollView_back_ground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rr_back_ground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp">

                <ImageView
                    android:id="@+id/iv_donar_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/iv_donar_image">

                    <com.hackathon.dropbydrop.reusable.CustomTextView
                        android:id="@+id/tv_donar_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_801D1D26"
                        android:textSize="20sp"
                        app:font="@string/roboto_regular" />

                    <com.hackathon.dropbydrop.reusable.CustomTextView
                        android:id="@+id/tv_donar_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_donar_name"
                        android:textColor="@color/color_801D1D26"
                        android:textSize="@dimen/background_text_size"
                        app:font="@string/roboto_regular" />

                    <com.hackathon.dropbydrop.reusable.CustomTextView
                        android:id="@+id/tv_donar_blood_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_donar_age"
                        android:textColor="@color/color_801D1D26"
                        android:textSize="@dimen/background_text_size"
                        app:font="@string/roboto_regular" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/iv_donar_image"
                    android:layout_below="@+id/iv_donar_image"
                    android:layout_marginTop="@dimen/difference_after_action"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <com.hackathon.dropbydrop.reusable.CustomTextView
                        android:id="@+id/tv_donar_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/lbl_height"
                        android:textColor="@color/color_801D1D26"
                        android:textSize="@dimen/background_text_size"
                        app:font="@string/avenir_book" />


                    <com.hackathon.dropbydrop.reusable.CustomTextView
                        android:id="@+id/tv_donar_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_donar_age"
                        android:layout_weight="0.5"
                        android:text="@string/lbl_weight"
                        android:textColor="@color/color_801D1D26"
                        android:textSize="@dimen/background_text_size"
                        app:font="@string/avenir_book" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_edit_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_height"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <com.hackathon.dropbydrop.reusable.CustomEditText
                        android:id="@+id/et_donar_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_donar_age"
                        android:layout_weight="0.5"
                        android:textColor="@color/color_1D1D26"
                        android:textSize="@dimen/background_text_size"
                        app:font="@string/avenir_book" />

                    <com.hackathon.dropbydrop.reusable.CustomEditText
                        android:id="@+id/et_donar_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_donar_age"
                        android:layout_weight="0.5"
                        android:textColor="@color/color_1D1D26"
                        android:textSize="@dimen/background_text_size"
                        app:font="@string/avenir_book" />

                </LinearLayout>

                <com.hackathon.dropbydrop.reusable.CustomTextView
                    android:id="@+id/tv_donar_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_edit_height"
                    android:layout_marginTop="5dp"
                    android:text="@string/lbl_location"
                    android:textColor="@color/color_801D1D26"
                    android:textSize="@dimen/background_text_size"
                    app:font="@string/avenir_book" />

                <com.hackathon.dropbydrop.reusable.CustomEditText
                    android:id="@+id/et_donar_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_donar_location"
                    android:textColor="@color/color_1D1D26"
                    android:textSize="@dimen/background_text_size"
                    app:font="@string/avenir_book" />

                <com.hackathon.dropbydrop.reusable.CustomTextView
                    android:id="@+id/tv_empty_stomach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_donar_location"
                    android:layout_marginTop="@dimen/padding_between_views"
                    android:text="@string/lbl_empty_stomach"
                    android:textColor="@color/color_801D1D26"
                    android:textSize="@dimen/background_text_size"
                    app:font="@string/avenir_book" />


                <Switch
                    android:id="@+id/swtich_empty_stomach"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_empty_stomach" />

                <com.hackathon.dropbydrop.reusable.CustomTextView
                    android:id="@+id/tv_yes_empty_stomach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/swtich_empty_stomach"
                    android:layout_below="@+id/tv_empty_stomach"
                    android:gravity="center_vertical"
                    android:text="@string/lbl_yes"
                    android:textColor="@color/color_1D1D26"
                    android:textSize="@dimen/background_ans_text_size"
                    app:font="@string/avenir_book" />

                <View
                    android:id="@+id/view_empty_stomach"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/swtich_empty_stomach"
                    android:layout_marginTop="@dimen/difference_after_action"
                    android:background="@color/color_801D1D26" />

                <com.hackathon.dropbydrop.reusable.CustomTextView
                    android:id="@+id/tv_indulgence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_empty_stomach"
                    android:layout_marginTop="@dimen/padding_between_views"
                    android:text="@string/lbl_indulgence"
                    android:textColor="@color/color_801D1D26"
                    android:textSize="@dimen/background_text_size"
                    app:font="@string/avenir_book" />

                <Switch
                    android:id="@+id/swtich_indulgence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_indulgence" />

                <com.hackathon.dropbydrop.reusable.CustomTextView
                    android:id="@+id/tv_yes_indulgence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/swtich_indulgence"
                    android:layout_below="@+id/tv_indulgence"
                    android:gravity="center_vertical"
                    android:text="@string/lbl_yes"
                    android:textColor="@color/color_1D1D26"
                    android:textSize="@dimen/background_ans_text_size"
                    app:font="@string/avenir_book" />

                <View
                    android:id="@+id/view_indulgence"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/tv_yes_indulgence"
                    android:layout_marginTop="@dimen/difference_after_action"
                    android:background="@color/color_801D1D26" />

                <com.hackathon.dropbydrop.reusable.CustomTextView
                    android:id="@+id/tv_recent_surgeries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_indulgence"
                    android:layout_marginTop="@dimen/padding_between_views"
                    android:text="@string/lbl_recent_surgeries"
                    android:textColor="@color/color_801D1D26"
                    android:textSize="@dimen/background_text_size"
                    app:font="@string/avenir_book" />

                <Switch
                    android:id="@+id/swtich_recent_surgeries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_recent_surgeries" />

                <com.hackathon.dropbydrop.reusable.CustomTextView
                    android:id="@+id/tv_yes_recent_surgeries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/swtich_recent_surgeries"
                    android:layout_below="@+id/tv_recent_surgeries"
                    android:gravity="center_vertical"
                    android:text="@string/lbl_yes"
                    android:textColor="@color/color_1D1D26"
                    android:textSize="@dimen/background_ans_text_size"
                    app:font="@string/avenir_book" />

                <View
                    android:id="@+id/view_recent_surgeries"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/swtich_recent_surgeries"
                    android:layout_marginTop="@dimen/difference_after_action"
                    android:background="@color/color_801D1D26" />

                <com.hackathon.dropbydrop.reusable.CustomTextView
                    android:id="@+id/tv_alcohol_consumption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_recent_surgeries"
                    android:layout_marginTop="@dimen/padding_between_views"
                    android:text="@string/lbl_alcohol_consumption"
                    android:textColor="@color/color_801D1D26"
                    android:textSize="@dimen/background_text_size"
                    app:font="@string/avenir_book" />

                <Switch
                    android:id="@+id/swtich_alcohol_consumption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_alcohol_consumption" />

                <com.hackathon.dropbydrop.reusable.CustomTextView
                    android:id="@+id/tv_yes_alcohol_consumption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/swtich_alcohol_consumption"
                    android:layout_below="@+id/tv_alcohol_consumption"
                    android:gravity="center_vertical"
                    android:text="@string/lbl_yes"
                    android:textColor="@color/color_1D1D26"
                    android:textSize="@dimen/background_ans_text_size"
                    app:font="@string/avenir_book" />

                <View
                    android:id="@+id/view_alcohol_consumption"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/swtich_alcohol_consumption"
                    android:layout_marginTop="@dimen/difference_after_action"
                    android:background="@color/color_801D1D26" />

                <com.hackathon.dropbydrop.reusable.CustomTextView
                    android:id="@+id/tv_any_diseases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_alcohol_consumption"
                    android:layout_marginTop="@dimen/padding_between_views"
                    android:text="@string/lbl_any_diseases"
                    android:textColor="@color/color_801D1D26"
                    android:textSize="@dimen/background_text_size"
                    app:font="@string/avenir_book" />

                <Switch
                    android:id="@+id/swtich_any_diseases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_any_diseases" />

                <com.hackathon.dropbydrop.reusable.CustomTextView
                    android:id="@+id/tv_yes_any_diseases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/swtich_any_diseases"
                    android:layout_below="@+id/tv_any_diseases"
                    android:gravity="center_vertical"
                    android:text="@string/lbl_yes"
                    android:textColor="@color/color_1D1D26"
                    android:textSize="@dimen/background_ans_text_size"
                    app:font="@string/avenir_book" />

                <View
                    android:id="@+id/view_any_diseases"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/swtich_any_diseases"
                    android:layout_marginTop="@dimen/difference_after_action"
                    android:background="@color/color_801D1D26" />

                <com.hackathon.dropbydrop.reusable.CustomEditText
                    android:id="@+id/et_any_disease_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_any_diseases"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"
                    android:background="@color/color_0B000000"
                    android:gravity="top"
                    android:hint="@string/lbl_hint_disease_details"
                    android:lines="2"
                    android:padding="5dp"
                    android:textColor="@color/color_1D1D26"
                    android:textSize="@dimen/background_text_size"
                    app:font="@string/avenir_book" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rr_back_ground"
                android:layout_marginTop="@dimen/padding_between_views"
                android:background="@color/colorPrimaryDark"
                android:text="@string/lbl_done"
                android:textColor="@color/white"
                android:typeface="sans" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
